tests/samples/positive/types/signed_min_literals.ax
module signed_min_literals;

fn main() -> i32 {
  let small: i8 = -128;
  let default_min = -2147483648;
  let wide: i64 = -9223372036854775808;
  if ((small) as i32) != -128 {
    return 1;
  }
  if default_min != -2147483648 {
    return 2;
  }
  if wide == ((0) as i64) {
    return 3;
  }
  return 0;
}
