tests/samples/negative/expressions/integer_modulo_by_zero.ax
module integer_modulo_by_zero;

fn main() -> i32 {
    let value: i32 = 1 % 0;
    return value;
}
